[EDP-DDM-25837] added internal endpoints for uploading and downloading files
Change-Id: Id679df489ac0255d015685466ff05660a553b175

[EDP-DDM-26369] fixed metadata search when validating total file size

Change-Id: I90d3f4c358cb610ac2aa613ffd6da2fa28fcdc38

[EDP-DDM-25037] removed hardcode from configmap

Change-Id: I3d92165e996146194a594bd2e73eac44ea6619ca

[EDP-DDM-25037] fixed file validation

Change-Id: Id41ee646b23e208f3908bae7053a6fa6cc5462a2

[EDP-DDM-26278] added exception handler for MaxUploadSizeExceededException

Change-Id: I38d1f0155d6844e636ff46c5a4281f098c752666

[EDP-DDM-24856] added endpoint for getting document metadata

Change-Id: I2f6befc9a654126008f7e340121b49ce84503c9d

[EDP-DDM-25027] changed usage of max-remote-file-size-mb to max-file-size

Change-Id: I0e0d8529bdd8cc01759db84c713a926cdcd75fa1

[EDP-DDM-25027] added file extension and content-type validation for files loaded from remote

Change-Id: Ia51cfc1585365f94f79d0398139d64a1ae285519

[EDP-DDM-25027] used max-file-configuration from registry configuration

Change-Id: I3a56db3a35bccd13dec866fa2d41b18a4a05e668